[tool.poetry]
name = "picomc"
version = "0.4.5"
description = "A tiny CLI Minecraft launcher"
homepage = "https://github.com/sammko/picomc"
authors = ["Samuel Čavoj <samuel@cavoj.net>"]
license = "MIT"
classifiers = [
	"Development Status :: 3 - Alpha"
	# The 'Programming Language' and 'License' classifiers are automatically set from the 'tool.poetry.dependencies.python' and 'tool.poetry.license' fields
]
readme = "README.md"

[tool.poetry.scripts]
picomc = "picomc:main"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=7.0"
requests = "^2.28.2"
urllib3 = "^1.26.15"
certifi = "^2022.12.7"
tqdm = "^4.65.0"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "picomc"

[tool.setuptools.package-data]
"picomc.java" = ["SysDump.class"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
